2.90 broken Eevee shadow pass #78190

Closed
opened 2020-06-24 04:11:23 +02:00 by higgsas · 6 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: Radeon RX 580 Series ATI Technologies Inc. 4.5.13596 Core Profile Context 20.5.1 27.20.1017.1011

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-23 21:54, hash: 49234c15e2
Worked: 2.83 / 2.9

Short description of error
Eevee shadow pass renders almost completely white, while in viewport its shows correctly

Exact steps for others to reproduce the error
Broken in all cases

Shadow pass in viewport:
workingshadow.PNG

Shadow pass in render:
brokenpass.png

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: Radeon RX 580 Series ATI Technologies Inc. 4.5.13596 Core Profile Context 20.5.1 27.20.1017.1011 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-23 21:54, hash: `49234c15e2` Worked: 2.83 / 2.9 **Short description of error** Eevee shadow pass renders almost completely white, while in viewport its shows correctly **Exact steps for others to reproduce the error** Broken in all cases **Shadow pass in viewport:** ![workingshadow.PNG](https://archive.blender.org/developer/F8639881/workingshadow.PNG) **Shadow pass in render:** ![brokenpass.png](https://archive.blender.org/developer/F8639883/brokenpass.png)
Author

Added subscriber: @higgsas

Added subscriber: @higgsas
higgsas changed title from Broken Eevee shadow pass to 2.90 broken Eevee shadow pass 2020-06-24 04:11:48 +02:00
Member

Added subscribers: @fclem, @Alaska

Added subscribers: @fclem, @Alaska
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm on a GTX 1050Ti on Linux.

Bisecting points to 439b40e601
CC @fclem

Can confirm on a GTX 1050Ti on Linux. Bisecting points to 439b40e601 CC @fclem

This issue was referenced by be0622533d

This issue was referenced by be0622533de28d6338797cab65999183572f44f8

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2020-06-24 13:24:11 +02:00
Thomas Dinges added this to the 2.90 milestone 2023-02-08 16:26:25 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78190
No description provided.